--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -133,7 +133,7 @@
 </div>
 
 <!--inbox-->
-<div class="col-md-6 center-column-padding">
+<div class="col-md-6">
   <h4 class="title-heading text-center">Activity Stream</h4>
   <div class="share-widget clearfix"> 
     <!-- Post an Idea -->
