--- a/public/templates/inbox.html
+++ b/public/templates/inbox.html
@@ -134,7 +134,7 @@
 
 <!--inbox-->
 <div class="col-md-6 layout-main">
-  <div class="pull-right "> <a class="btn-cm" href="ComposeMessage.html">Compose Message</a> </div>
+  <div class="text-right padding-bottom-inbox" > <a class="btn-cm" href="ComposeMessage.html">Compose Message</a> </div>
   <div>
     <Div class="message-tab">
       <ul id="myTab2" class="nav nav-pills">
