--- a/public/templates/invitefriends.html
+++ b/public/templates/invitefriends.html
@@ -134,10 +134,10 @@
     <!--inbox-->
     <div class="col-md-9 col-sm-8">
       <h4 class="title-heading text-center" >  invite friends</h4>
-      <div class=" text-left">
+      <div class=" text-center">
        
          
-           Add colleagues and start collaborating
+          <h5> Add colleagues and start collaborating</h5>
        
       </div>
       <hr>
