--- a/public/templates/page-notifications.html
+++ b/public/templates/page-notifications.html
@@ -124,20 +124,20 @@
 <div class="content">
 <div class="container">
   <div class="row">
-    <div class="col-md-3 col-sm-5">
+    <div class="col-md-3">
       <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
       <div class="text-center">
         <h5><a href="allfriend.html">123 Coworkers in Your Network</a></h5>
       </div>
       <div class="list-group padding-top"> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="Activity Stream.html" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="inbox.html" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="files.html" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
     </div>
-    <!--inbox-->
-    <div class="col-md-9 col-sm-8">
+    <!--notifications-->
+    <div class="col-xs-9">
       <h4 class="title-heading text-center" >  notifications</h4>
-      <div class=" text-left">
+      <div class=" text-center">
        
          
-           Recent notification 
+          <h4> Recent notifications </h4>
        
       </div>
       <hr>
