--- a/public/templates/checkout.html
+++ b/public/templates/checkout.html
@@ -85,7 +85,7 @@
      <p> 360notion.com accepts all major credit & debit cards. All payments are secure with 256-bit encryption.</br> If you have any questions, please contact customer service at admin@myabuy.com</p>
 </strong>
    <br></br> 
-    <div class="col-xs-6 "><div class=" billing-form">
+    <div class="col-md-8 "><div class=" billing-form">
 <div class="form-group">
   <label for="name">Name On Card:</label>
   <input id="name" class="form-control " type="text" data-required="true" name="name">
@@ -129,7 +129,7 @@
 </div>
 </div></div>
     
-    <div class="col-xs-6 padding-top ">
+    <div class="col-md-4">
     <div class="billing-form">
     
     <div class="form-group">
