--- a/public/templates/files.html
+++ b/public/templates/files.html
@@ -134,8 +134,12 @@
     <!--inbox-->
     <div class="col-md-9 col-sm-8">
       <h4 class="title-heading text-center" > all files</h4>
+      <div class="row">     <div class="col-sm-5 col-sm-offset-2 col-md-6 col-md-offset-0 text-left"> <a class="btn btn-primary text-left">Upload File</a></div>     <div class="col-sm-5 col-md-6 text-right"> <input class="form-control input-md mainnav-search-query search-form" type="text" placeholder="Search for a file">
+            <button class="btn btn-sm mainnav-form-btn"> <i class="fa fa-search"></i> </button>
+          </form></div></div>
       <div class="row text-center">
-        <div class=" padding text-left"><div class="inline-block"> <a class="btn btn-primary text-left">Upload File</a></div>
+      
+        <div class="text-left"><div class="inline-block"> <a class="btn btn-primary text-left">Upload File</a></div>
           <div class="pull-right"><form class="mainnav-form" role="search">
             <input class="form-control input-md mainnav-search-query search-form" type="text" placeholder="Search for a file">
             <button class="btn btn-sm mainnav-form-btn"> <i class="fa fa-search"></i> </button>
